--- a/app/styles/scss/responsive.scss
+++ b/app/styles/scss/responsive.scss
@@ -73,7 +73,7 @@
         left: -235px;
     }
     .page-content {
-        padding-left: 15px;
+        padding-left: 0;
     }
     .mdl-layout__header-row {
         padding-left: 2px;
@@ -87,7 +87,6 @@
                         margin-top: 0;
                         li {
                             a {
-                                line-height: auto;
                                 display: block;
                                 font-size: 14px;
                                 width: auto;
