--- a/app/styles/scss/sidebar.scss
+++ b/app/styles/scss/sidebar.scss
@@ -141,7 +141,7 @@
         width: 210px !important;
     }
     .page-content {
-        padding-left: 15px !important;
+        padding-left: 0 !important;
     }
     .mdl-layout__header-row {
         padding-left: 2px !important;
